--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "babel-loader": "^8.0.4",
     "babel-plugin-import": "^1.11.0",
     "bcrypt": "^3.0.2",
-    "clean-webpack-plugin": "^0.1.19",
+    "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^0.28.11",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "koa": "^2.6.2",
     "koa-body": "^4.0.4",
     "koa-generic-session": "^2.0.1",
+    "koa-multer": "^1.0.2",
     "koa-mysql-session": "^0.0.2",
     "koa-router": "^7.4.0",
     "koa-session": "^5.10.0",
@@ -49,7 +50,7 @@
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
-    "antd": "^3.11.0",
+    "antd": "^3.11.2",
     "axios": "^0.18.0",
     "dayjs": "^1.7.7",
     "react": "^16.4.1",
