--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-loader": "^8.0.4",
     "babel-plugin-import": "^1.11.0",
     "bcrypt": "^3.0.2",
+    "cheerio": "^1.0.0-rc.2",
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^0.28.11",
     "file-loader": "^2.0.0",
@@ -32,6 +33,7 @@
     "koa-mysql-session": "^0.0.2",
     "koa-router": "^7.4.0",
     "koa-session": "^5.10.0",
+    "koa2-request": "^1.0.4",
     "mini-css-extract-plugin": "^0.4.1",
     "mobx": "^5.6.0",
     "mobx-react": "^5.4.2",
@@ -44,6 +46,7 @@
     "react-hot-loader": "^4.3.3",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
+    "svg-sprite-loader": "^4.1.3",
     "url-loader": "^1.1.2",
     "webpack": "^4.15.1",
     "webpack-cli": "^3.0.8",
