--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "mini-css-extract-plugin": "^0.4.1",
     "mobx": "^5.6.0",
     "mobx-react": "^5.4.2",
-    "mysql": "^2.16.0",
     "node-sass": "^4.9.1",
     "nodemailer": "^4.7.0",
     "nodemailer-smtp-transport": "^2.7.4",
@@ -46,6 +45,7 @@
     "react-hot-loader": "^4.3.3",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
+    "svg-inline-loader": "^0.8.0",
     "svg-sprite-loader": "^4.1.3",
     "url-loader": "^1.1.2",
     "webpack": "^4.15.1",
@@ -56,10 +56,12 @@
     "antd": "^3.11.2",
     "axios": "^0.18.0",
     "dayjs": "^1.7.7",
+    "mysql2": "^1.6.4",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "sequelize": "^4.42.0",
     "svg-captcha": "^1.3.12"
   }
 }
