--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "start": "webpack-dev-server --mode=development  --progress --open --hot",
     "build": "rimraf dist && webpack --progress --config webpack.prod.js"
   },
-  "keywords": ["react","koa","movie"],
+  "keywords": [
+    "react",
+    "koa",
+    "movie"
+  ],
   "author": "chenjun",
   "license": "ISC",
   "devDependencies": {
@@ -20,7 +24,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
     "babel-plugin-import": "^1.11.0",
-    "bcrypt": "^3.0.2",
+    "bcrypt": "^5.0.0",
     "cheerio": "^1.0.0-rc.2",
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^0.28.11",
@@ -37,7 +41,7 @@
     "mini-css-extract-plugin": "^0.4.1",
     "mobx": "^5.6.0",
     "mobx-react": "^5.4.2",
-    "node-sass": "^4.9.1",
+    "node-sass": "^4.14.1",
     "nodemailer": "^4.7.0",
     "nodemailer-smtp-transport": "^2.7.4",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
