--- a/package.json
+++ b/package.json
@@ -41,12 +41,12 @@
     "mini-css-extract-plugin": "^0.4.1",
     "mobx": "^5.6.0",
     "mobx-react": "^5.4.2",
-    "node-sass": "^4.14.1",
     "nodemailer": "^4.7.0",
     "nodemailer-smtp-transport": "^2.7.4",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^2.1.5",
     "react-hot-loader": "^4.3.3",
+    "sass": "^1.50.1",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "svg-inline-loader": "^0.8.0",
